# testing-theory

./: .gitignore  Makefile  Must.ACCSExamples.html  Must.ACCSInstance.html  Must.Bar.html  Must.Bar_Induction.Bar.html  Must.CCSInstance.html  Must.Clos_n.html  Must.Coin.html  Must.Coin_tower.html  Must.Completeness.html  Must.Coq_Helpers.Clos_n.html  Must.Coq_Helpers.ForAllHelper.html  Must.Coq_Helpers.InListPropHelper.html  Must.Coq_Helpers.MultisetHelper.html  Must.Equivalence.html  Must.Generalization.GeneralizeLtsOutputs.html  Must.Generalization.Old_Developments.Normalisation.html  Must.Generalization.Old_Developments.OldTransitionSystems.html  Must.Interaction_Between_Lts.Examples_of_Interactions.ForwarderConstruction.html  Must.Interaction_Between_Lts.Examples_of_Interactions.ParallelLTSConstruction.html  Must.Interaction_Between_Lts.InteractionBetweenLts.html  Must.Labelled_Transition_System.Actions.Definitions.ActTau.html  Must.Labelled_Transition_System.Actions.Definitions.Subset_Act.html  Must.Labelled_Transition_System.Actions.Exemples_of_Actions.InputOutputActions.html  Must.Labelled_Transition_System.Code_and_memory_separation.CodePurification.html  Must.Labelled_Transition_System.Definitions.Bisimulation.html  Must.Labelled_Transition_System.Definitions.Convergence.html  Must.Labelled_Transition_System.Definitions.FiniteImageLTS.html  Must.Labelled_Transition_System.Definitions.Lts_CN.html  Must.Labelled_Transition_System.Definitions.Lts_FW.html  Must.Labelled_Transition_System.Definitions.Lts_OBA.html  Must.Labelled_Transition_System.Definitions.Lts_OBA_FB.html  Must.Labelled_Transition_System.Definitions.Simulation.html  Must.Labelled_Transition_System.Definitions.Termination.html  Must.Labelled_Transition_System.Definitions.WeakTransitions.html  Must.Labelled_Transition_System.Definitions.gLts.html  Must.Labelled_Transition_System.Examples_of_LTS.ACCS.ACCSExamples.html  Must.Labelled_Transition_System.Examples_of_LTS.ACCS.ACCSInstance.html  Must.Labelled_Transition_System.Examples_of_LTS.CCS.CCSInstance.html  (+217 more)
doc-config/: coqdoc.css  header.html
paper/: Makefile  conclusion.tex  improved_characterisation.tex  introduction.tex  macros.tex  main-ppdp2025.tex  main.bib  preliminaries.tex  properties_lts.tex
past-submission/: ACCS.tex  Makefile  TODO.tex  appendix-forwarders.tex  axioms-comments.tex  axioms.tex  bar-induction.tex  conclusion.tex  coq_details.tex  coq_tex_mapping.tex  definition-preorder.tex  flake.nix  further_comparison.tex  introduction.tex  macros.tex  main-concur2024.tex  main-concur2024.vtc  main.bib  preliminaries.tex  proof_of_soundness.tex  soundness-bhv.tex  traces_normal_form.tex
theories/: .lia.cache  ACCSExamples.v  ACCSInstance.v  ACCS_with_ValuePassing_Instance.v  ACCS_with_ValuePassing_InstanceSEQ3.v  Bar.v  CCSInstance.v  CCS_Good.v  CCS_ta.v  CCS_tc.v  CCS_with_ValuePassing_Instance.v  CCS_with_Value_Instance.v  CCS_with_Value_Instance2.v  CCS_with_Value_Instance3.v  CCS_with_Value_Instance3bis.v  Clos_n.v  CodePurification.v  Coin.v  Coin_tower.v  Completeness.v  CompletenessNotComplete.v  CompletenessWithDifferentGood.v  Equivalence.v  GeneralizeLtsOutputs.v  InListPropHelper.v  InputOutputActions.v  Lift.v  Lts_OBA.v  Lts_OBA_FB.v  MultisetLTSConstruction.v  Must.v  Normalisation.v  OldTransitionSystems.v  Pi_Instance.v  README.md  (+19 more)
(+230 files in other folders)
